--- a/Passes/CMakeLists.txt
+++ b/Passes/CMakeLists.txt
@@ -9,6 +9,8 @@ add_llvm_loadable_module( CSE231
   part1/BranchBias.cpp
   DFA/231DFA.h
   DFA/ReachingDefinitionAnalysis.cpp
+  DFA/LivenessAnalysis.cpp
+  DFA/MayPointToAnalysis.cpp
 
   PLUGIN_TOOL
   opt
